# tableau-agent-toolkit

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-spec-generation-cli-and-project-scaffolding/: 01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-04-SUMMARY.md  01-05-PLAN.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-validation-and-qa/: 02-01-SUMMARY.md  02-03-PLAN.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-packaging-and-publishing/: 03-01-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-RESEARCH.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/specs/: executive-kpi.dashboard_spec.yaml  finance-reconciliation.dashboard_spec.yaml  ops-monitoring.dashboard_spec.yaml
examples/sql/: finance_reconciliation.sql
scripts/: sync_tableau_schemas.py
skills/tableau-dashboard-qa-reviewer/: SKILL.md
skills/tableau-dashboard-spec-writer/: SKILL.md
skills/tableau-publisher/: SKILL.md
skills/tableau-twb-generator/: SKILL.md
skills/tableau-twb-validator/: SKILL.md
src/tableau_agent_toolkit/: __init__.py  cli.py
templates/: catalog.yaml
tests/: conftest.py
tests/fixtures/: broken_references.twb  broken_references_spec.yaml  dangling_datasource.twb  dangling_datasource_spec.yaml  empty_dashboard.twb  minimal_template.twb  missing_calculation.twb  valid_full.twb
tests/integration/: test_agent_pipeline.py  test_cli.py  test_examples.py  test_spec_init.py
tests/unit/: test_skill_manifests.py
(+87 files in other folders)
