[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tableau-agent-toolkit"
version = "0.1.0"
description = "Generate, validate, package, and publish Tableau workbooks from structured YAML dashboard specifications"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13",
    "typer>=0.15",
    "lxml>=5.4",
    "pyyaml>=6.0.3",
    "tableauserverclient>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tableau_agent_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
